# nestor

./: LICENSE  MANIFEST.in  README.md  setup.cfg  setup.py
examples/: README
examples/CsV3Sb5/: KPOINTS.hsp  OUTCAR  lindhard.inp
examples/CsV3Sb5/Static_Lplots/: lindhard_path_TOTAL.csv  lindhard_static_TOTAL_abs.csv  lindhard_static_TOTAL_imag.csv  lindhard_static_TOTAL_real.csv  lindhard_static_qmax_ALL.txt
examples/Graphene/: EIGENVAL  OUTCAR  POSCAR  WAVECAR  nohup.out  vasprun.xml
examples/Graphene/Static_Lplots/: lindhard_path_TOTAL.csv  lindhard_static_TOTAL_abs.csv  lindhard_static_TOTAL_imag.csv  lindhard_static_TOTAL_real.csv  lindhard_static_qmax_ALL.txt
examples/Mos2/: EIGENVAL  KPOINTS.hsp  OUTCAR  POSCAR  WAVECAR  lindhard.inp  nohup.out  vasprun.xml
examples/Mos2/Static_Lplots/: lindhard_path_TOTAL.csv  lindhard_static_TOTAL_abs.csv  lindhard_static_TOTAL_imag.csv  lindhard_static_TOTAL_real.csv  lindhard_static_qmax_ALL.txt
examples/ScV6Sn6/: EIGENVAL  POSCAR
examples/ScV6Sn6/Static_Lplots-used/: lindhard_path_TOTAL.csv  (+3 more)
examples/TaS2/: EIGENVAL  OUTCAR  POSCAR  WAVECAR  lindhard.inp  vasprun.xml
examples/ThAs2/: OUTCAR  POSCAR  lindhard.inp
lindhardkit/: __init__.py  __main__.py  cli.py  geometry.py  interp.py  logging_utils.py  occupations.py  plotting.py  state.py  utils.py
lindhardkit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
lindhardkit/io/: __init__.py
nestor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
sampleinputs/: KPOINTS  KPOINTS.hsp  lindhard.inp
(+44 files in other folders)
