[metadata]
name = nestor
version = 0.1.0
description = Lindhard susceptibility + EF-JDOS toolkit with optional wavefunction form factors
long_description = file: README.md
long_description_content_type = text/markdown
author = Chinedu E. Ekuma
author_email = cekuma1@gmail.com, cekuma@lehigh.edu
license = MIT
license_files = LICENSE
url = https://physics.cas.lehigh.edu/faculty-staff/chinedu-ekuma
project_urls =
    Source = https://github.com/gmp007/nestor/
    Issues = https://github.com/gmp007/nestor/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Physics

[options]
packages = find:
python_requires = >=3.10
install_requires =
    numpy>=1.23
    scipy>=1.10
    matplotlib>=3.7
    pandas>=2.0
    tqdm>=4.65
    ase>=3.22
include_package_data = True
zip_safe = False

[options.packages.find]
include =
    lindhardkit
    lindhardkit.*
exclude =
    tests

[options.entry_points]
console_scripts =
    nestor = lindhardkit.__main__:main

[tool:pytest]
addopts = -q

[flake8]
max-line-length = 100
extend-ignore = E203, W503
